--- a/Sopra/login.properties
+++ b/Sopra/login.properties
@@ -2,7 +2,7 @@
 javax.persistence.jdbc.url=jdbc\:derby\:H\:\\.win7_profile\\Documents\\GitHub\\4142Sopra\\Sopra\\MyDB
 eclipselink.logging.session=false
 eclipselink.logging.level=FINE
-eclipselink.ddl-generation=drop-and-create-tables
+eclipselink.ddl-generation=none
 eclipselink.logging.timestamp=false
 eclipselink.application-location=H\:/workspace/Sopra
 javax.persistence.jdbc.password=
