--- a/Sopra/.classpath
+++ b/Sopra/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/derby.jar"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.glassfish.lib.system">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -19,5 +18,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsp-api-2.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-3.5.jar"/>
+	<classpathentry kind="lib" path="H:/.win7_profile/Desktop/db-derby-10.10.1.1-bin/lib/derby.jar"/>
+	<classpathentry kind="lib" path="H:/.win7_profile/Desktop/db-derby-10.10.1.1-bin/lib/derbytools.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
