--- a/Sopra/.classpath
+++ b/Sopra/.classpath
@@ -24,6 +24,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/glassfish"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Glassfish"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
